--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "prettier": "3.6.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "uuid": "^13.0.0"
   }
 }
