--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
     "postinstall": "pnpm add husky && pnpm exec husky install",
-    "dev": "node --env-file=/home/vceesar/fsc/.env src/index.js"
+    "dev": "node --env-file=/home/vceesar/api-study/.env --watch src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "validator": "^13.15.23"
   }
 }
